--- a/TestGitHub/TestGitHub.csproj
+++ b/TestGitHub/TestGitHub.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Metodi.cs" />
     <Compile Include="Principale.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
